# modrinth-api-rs

./: Cargo.toml  LICENSE  TODO.md  readme.md
.github/: release-drafter.yml
.github/workflows/: rust.yml
examples/: basic_search.rs  extended_search.rs  search.rs
src/: lib.rs  main.rs  utils.rs
src/api/: mod.rs  projects.rs  search.rs  versions.rs
src/structs/: mod.rs  projects.rs  search.rs  versions.rs
tests/: search_tests.rs  versions_tests.rs
