[package]
name = "modrinth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
chrono = { version = "0.4.41", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.12"
lazy-regex = "3.4.1"
