[package]
name = "modrinth-api"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
lazy-regex = "3.4.1"
url = { version = "2.5.4", features = ["serde"] }
